<resources>
    <string name="app_name">Trigo</string>
    <string name="username_signup">Username</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="dont_have_an_acct">Dont have an acct?</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="already_have_an_acct">Already have an acct</string>
    <string name="select_photo">select photo</string>
    <string name="signout">SignOut</string>
    <string name="check_network">Check Network</string>
</resources>
